Fixes for Backtesting